src/styles/null.scss
:root {
  // THEMES
  --theme-light-header: #dfe2df;
  --theme-dark-header: #ca6c6f;
  --theme-neitral-header: #cccc46;
  --theme-default-header: var(--theme-neitral-header);

  // BACKGROUNDS
  --theme-light-bgimage: linear-gradient(to right bottom, #051937, #162454, #312d70, #533389, #7a359f);
  --theme-dark-bgimage:  linear-gradient(to right bottom, #000000, #160b11, #20141e, #281b2e, #2b2440);
  --theme-neitral-bgimage: url(../assets/images/bg.jpg);
  --theme-default-bgimage: var(--theme-neitral-bgimage);
}

* {
  scrollbar-color: rgb(37, 56, 97) rgba(0, 0, 0, .7);
  scrollbar-width: thin;
}

::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}
::-webkit-scrollbar-thumb {
  background-color: rgb(37, 56, 97);
  border-radius: 2px;
}
::-webkit-scrollbar-track,
::-webkit-scrollbar-corner {
  background-color: rgba(0, 0, 0, .7);
}

html {
  margin: 0;
  height: 100%;
  width: 100%;
}
body {
  margin: 0;
  height: 100%;
  width: 100%;
  font-weight: 400;
  font-size: 14px;
  line-height: 1;
  color: #fff;
  background: var(--theme-default-bgimage);
  background-color: #10100e;
  background-attachment: fixed;
  background-position: 0 0;
  background-repeat: no-repeat;
  background-size: cover;
  font-family: sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
input,
button,
textarea,
::placeholder {
  font-family: inherit;
}
::placeholder {
  color: inherit;
}
* {
  padding: 0;
  margin: 0;
  border: 0;
}
*,
*::before,
*::after {
  box-sizing: border-box;
}
:focus,
:active {
  outline: none;
}
a,
a:visited {
  text-decoration: none;
}
a:focus,
a:active {
  outline: none;
}
nav,
footer,
header,
aside {
  display: block;
}
a {
  display: inline-block;
  color: inherit;
  text-decoration: none;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: inherit;
  font-weight: 400;
  margin: 0;
}
p {
  margin: 0;
}
ul,
li {
  list-style: none;
  padding: 0;
  margin: 0;
}
button {
  border: none;
  background: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
  &:active,
  &:focus {
    outline: none;
  }
}

